projects/prime-enrollment/src/app/modules/enrollment/components/search-organization-modal/search-organization-modal.component.scss
@import 'variables.scss';

:host() {
  padding: 0px;
  font-family: Myriad-Pro, Calibri, Arial, sans serif;
  // margin-top: 25px;
}

.card-header {
  display: flex;
  justify-content: space-between;
  background-color: map-get($theme-colors, primary);
  color: #fff;
  align-items: flex-end;

  .close {
    color: #fff
  }
}

label {
  margin-bottom: 0px;
}

.card-body {
  border: 0px;
}

h2 {
  color: #fff;
}

.action-button {
  width: 160px;
}

.close-button {
  width: 1fr;
}

.actions {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  padding: 12px;
  background-color: $gray;

  .cancel {
    background-color: #fff;
  }

  .add {
    margin-left: 18px;
  }
}

@media only screen and (min-width: 569px) {
  header {
    font-size: 2rem;
  }

  mat-card {
    min-width: 500px;

  }
}

